--- a/db.properties
+++ b/db.properties
@@ -1,4 +1,6 @@
-user=developer
-password=1234567
+user=root
+password=L@nYF!v3
 dburl=jdbc:mysql://localhost:3306/coursejdbc
+useLegacyDatetimeCode=false
+serverTimezone=Europe/Amsterdam
 useSSL=false
